--- a/src/Views/Pages/index.html.twig
+++ b/src/Views/Pages/index.html.twig
@@ -5,9 +5,6 @@
 {% endblock %}
 
 {% block body %}
-    <h1>{{ var }}</h1>
+    <h1 class="text-center text-primary pt-4">{{ var }}</h1>
 
-    <div>
-
-    </div>
 {% endblock %}
